# pdfparser

./: .gitignore  README.md  pyproject.toml
output/: Election_Results.csv
scripts/: parse_pdf.py
src/: __init__.py  candidate.py  config.py  contest.py  event.py  logger.py  models.py  precinct.py  utils.py  writer.py
src/pdf_election_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
