# Process_pdf/pyproject.toml
[project]
name = "pdf-election-extractor"
version = "0.1.0"
description = "Extract precinct-level election results from PDF tabulations"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "pdfplumber>=0.10",
    "pandas>=1.5",
    "tqdm>=4.64",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]